--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bär Bar</title>
+<title>Bär Bar.com</title>
 
 <style>
 body {
@@ -420,3 +420,4 @@ function toggleSlider(id) {
 
 </body>
 </html>
+
